# UxPlay

./: .gitignore  CMakeLists.txt  uxplay.cpp
renderers/: CMakeLists.txt  video_renderer_gstreamer.c
